welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:1: error: Missing closing brace `}' assumed here
def tabcolor ():Array[Color]={
^Array2:1: error: expected class or object definition
def tabcolor ():Array[Color]={
^Array2:9: error: expected class or object definition
def useBrosse(c : Color){
^Array2:17: error: expected start of definition
override def run() {
         ^